# object-counter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  setup_model.sh
counter/: config.py  debug.py  manage.py
counter/adapters/: alchemy_engine.py  count_repo.py  object_detector.py
counter/domain/: actions.py  ports.py  predictions.py
counter/entrypoints/: webapp.py
counter/utility/: auth.py  logger.py
tests/adapters/: test_count_sql_db_repo.py
tests/domain/: helpers.py  test_actions.py  test_predictions.py
tests/entrypoints/: test_webapp.py
tmp/: .gitignore
