[tool.poetry]
name = "object-counter"
version = "0.1.0"
description = "Object detection and Counting API using Flask"
authors = ["Nishanth R <nishanthrajamani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.5"
pillow = "9.5.0"
requests = "^2.28.0"
pymongo = "3.11.3"
flask = "2.3.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
