[tool.poetry]
name = "counter"
version = "0.1.0"
description = "Object detection and Counting API using Flask"
authors = ["Nishanth R <nishanthrajamani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "1.20.1"
pillow = "8.1.1"
requests = "2.25.1"
pymongo = "3.11.3"
flask = "1.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
jinja2 = "<3.1.0"
itsdangerous = "<2.1.0"
werkzeug = "<2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pytest = "6.2.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
